[gd_scene load_steps=31 format=3 uid="uid://bvmxlem0gfsp6"]

[ext_resource type="Script" path="res://enemy.gd" id="1_586o6"]
[ext_resource type="Texture2D" uid="uid://co0okb1y008io" path="res://sprites/characters/skeleton.png" id="1_igipo"]
[ext_resource type="Texture2D" uid="uid://dnmj0rd8jnpo3" path="res://sprites/characters/dcdm8qc-85787558-abc9-4fde-8951-ccc55d926ed3.png" id="3_egy2l"]
[ext_resource type="Texture2D" uid="uid://dpg8boy2byjf2" path="res://sprites/characters/player.png" id="3_ff5ns"]

[sub_resource type="AtlasTexture" id="AtlasTexture_423wg"]
atlas = ExtResource("1_igipo")
region = Rect2(0, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pd3u5"]
atlas = ExtResource("1_igipo")
region = Rect2(64, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_gfx27"]
atlas = ExtResource("1_igipo")
region = Rect2(128, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_dalf0"]
atlas = ExtResource("1_igipo")
region = Rect2(192, 256, 64, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ndoqe"]
atlas = ExtResource("3_ff5ns")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ble1f"]
atlas = ExtResource("3_ff5ns")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3slpn"]
atlas = ExtResource("3_ff5ns")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_tncup"]
atlas = ExtResource("3_ff5ns")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_qtdnt"]
atlas = ExtResource("3_ff5ns")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_52wof"]
atlas = ExtResource("3_ff5ns")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_wqg3u"]
atlas = ExtResource("3_ff5ns")
region = Rect2(0, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_r7ac1"]
atlas = ExtResource("3_ff5ns")
region = Rect2(48, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_hrwbi"]
atlas = ExtResource("3_ff5ns")
region = Rect2(96, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_phe4w"]
atlas = ExtResource("3_ff5ns")
region = Rect2(144, 288, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ho8j"]
atlas = ExtResource("3_ff5ns")
region = Rect2(0, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_jabod"]
atlas = ExtResource("3_ff5ns")
region = Rect2(48, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_x3aik"]
atlas = ExtResource("3_ff5ns")
region = Rect2(96, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_ctic5"]
atlas = ExtResource("3_ff5ns")
region = Rect2(144, 336, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8wxsg"]
atlas = ExtResource("3_ff5ns")
region = Rect2(0, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_huh56"]
atlas = ExtResource("3_ff5ns")
region = Rect2(48, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kyk67"]
atlas = ExtResource("3_ff5ns")
region = Rect2(96, 384, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_8n187"]
atlas = ExtResource("3_ff5ns")
region = Rect2(144, 384, 48, 48)

[sub_resource type="SpriteFrames" id="SpriteFrames_peeke"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_423wg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pd3u5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gfx27")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dalf0")
}],
"loop": true,
"name": &"death",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ndoqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ble1f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3slpn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tncup")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qtdnt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52wof")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_egy2l")
}],
"loop": true,
"name": &"normal",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_wqg3u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r7ac1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hrwbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_phe4w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ho8j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jabod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x3aik")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ctic5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8wxsg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_huh56")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kyk67")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8n187")
}],
"loop": true,
"name": &"walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_4lr5g"]
radius = 102.108

[sub_resource type="CircleShape2D" id="CircleShape2D_xow6o"]
radius = 17.0294

[sub_resource type="CircleShape2D" id="CircleShape2D_1pgq6"]
radius = 17.4642

[node name="enemy" type="CharacterBody2D"]
script = ExtResource("1_586o6")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1.90735e-06, -5)
scale = Vector2(1.14917, 1.14917)
sprite_frames = SubResource("SpriteFrames_peeke")
animation = &"walk"
offset = Vector2(0, -6)

[node name="detection_area" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="detection_area"]
position = Vector2(-1, 0)
shape = SubResource("CircleShape2D_4lr5g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_xow6o")

[node name="take_damage_cooldown" type="Timer" parent="."]

[node name="enemy_hitbox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="enemy_hitbox"]
shape = SubResource("CircleShape2D_1pgq6")

[connection signal="body_entered" from="detection_area" to="." method="_on_detection_area_body_entered"]
[connection signal="body_exited" from="detection_area" to="." method="_on_detection_area_body_exited"]
[connection signal="timeout" from="take_damage_cooldown" to="." method="_on_take_damage_cooldown_timeout"]
[connection signal="body_entered" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_entered"]
[connection signal="body_exited" from="enemy_hitbox" to="." method="_on_enemy_hitbox_body_exited"]
